Reset the canvas size on toggling preserve aspect ratio

The original intent of Juan Palacios' patch committed twelve
years ago was to reset the dialog to the original values:

https://invent.kde.org/graphics/krita/-/commit/b005c7e0dc569f58308b08238b0b3c67101783f0

It is debatable whether we should do that and not keep the
values the user entered, but that needs more discussion.

CCMAIL:kimageshop@kde.org

BUG:452605
(cherry picked from commit 20d6643a0c950830de98266c7a8166d59a0d49b8)