libs/ui/imagesize/dlg_canvassize.cc
@@ -243,17 +243,18 @@ void DlgCanvasSize::slotAspectChanged(bool keep)
 
     if (keep) {
         // size values may be out of sync, so we need to reset it to defaults
-        m_newWidth = m_originalWidth;
-        m_newHeight = m_originalHeight;
         m_xOffset = 0;
         m_yOffset = 0;
 
         m_page->canvasPreview->blockSignals(true);
         m_page->canvasPreview->setCanvasSize(m_newWidth, m_newHeight);
+        m_page->newWidthDouble->setValue(m_newWidth);
+        m_page->newHeightDouble->setValue(m_newHeight);
         m_page->canvasPreview->setImageOffset(m_xOffset, m_yOffset);
         m_page->canvasPreview->blockSignals(false);
         updateOffset(CENTER);
         updateButtons(CENTER);
+
     }
 }
 
